--- a/index.html
+++ b/index.html
@@ -3,32 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    <title>Teste de Site</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="shortcut icon" href="imagem/lobo.png" type="image/x-icon">
+    <title>Toca Do Lobo</title>
 </head>
 <body>
     <main>
         <section>
-                <span id="formulario" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-            <nav id="itens">
-                <a href="">Home</a>
-                <a href="">Sobre</a>
-                <a href="">Ajuda</a>
-                <a href="">Serviços</a>
-                <a href="">Entrar</a>
-                <a href="">Inscrever-se</a>
+            <nav>
+                <a href=""><img src="imagem/logo-facebbok.webp" alt=""></a>
+                <a href=""><img src="imagem/logo-Instagram.webp" alt=""></a>
+                <a href=""><img src="imagem/logo-X.jpg" alt="" ></a>
+                <a href=""><img src="imagem/Logo-YouTube.png" alt=""></a>
             </nav>
-      </section>
+          <aside>
+            <h1>Restaurante e Lanchonete</h1>
+            <h2>Toca do LoBo <img src="imagem/lobo1.png" alt=""></h2>
+            <a id="cardapio" href="">Véja o Cardápio</a>
+            <a id="reserva" href="">Faça Sua Reserva</a>
+          </aside>
+        </section>
     </main>
-    <script>
-        function clickMenu(){
-            if (itens.style.display =='block') {
-                itens.style.display ='none'
-            }else{
-                itens.style.display='block'
-            }
-        }
-    </script>
 </body>
 </html>
