--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/style.css">
-    <link rel="shortcut icon" href="imagem/lobo.png" type="image/x-icon">
-    <title>Toca Do Lobo</title>
+    <title>Toca do LoBo</title>
 </head>
 <body>
     <main>
         <section>
             <nav>
-                <a href=""><img src="imagem/logo-facebbok.webp" alt=""></a>
+                <a href=""><img src="imagem/logo-WhatsApp.webp" alt=""></a>
                 <a href=""><img src="imagem/logo-Instagram.webp" alt=""></a>
-                <a href=""><img src="imagem/logo-X.jpg" alt="" ></a>
                 <a href=""><img src="imagem/Logo-YouTube.png" alt=""></a>
+                <a href=""><img src="imagem/logo-X.jpg" alt=""></a>
             </nav>
-          <aside>
-            <h1>Restaurante e Lanchonete</h1>
-            <h2>Toca do LoBo <img src="imagem/lobo1.png" alt=""></h2>
-            <a id="cardapio" href="">Véja o Cardápio</a>
-            <a id="reserva" href="">Faça Sua Reserva</a>
-          </aside>
+            <aside>
+                <p>Lanchonete</p>
+                <p>Toca do LoBo <img src="imagem/lobo1.png" alt=""></p>
+                <a href="">Cardápio</a>
+                <a href="">Faça sua Reserva</a>
+            </aside>
         </section>
     </main>
 </body>
