--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilo/style.css" media="all">
+    <link rel="shortcut icon" href="imagem/lobo.png" type="image/x-icon">
     <title>Toca do LoBo</title>
 </head>
 <body>
