--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <link rel="stylesheet" href="estilo/style.css" media="all">
     <link rel="shortcut icon" href="imagem/lobo.png" type="image/x-icon">
     <title>Toca do LoBo</title>
+    <link rel="stylesheet" href="estilo/style.css" media="all">
+    <link rel="stylesheet" href="estilo/mediaquery.css">
 </head>
 <body>
     <main>
@@ -20,10 +21,15 @@
                 <a href="#">Galeria</a>
                 <a href="#">Contatos</a>
             </nav>
-            <h1>Toca Do LoBo</h1>
-            <h1>Restaurante e Lanchonete</h1>
-            <img id="lobo" src="imagem/lobo1.png" alt="Imagem de um Lobo">
-            <a  id="reservar" href="#">Reservar Uma Mesa</a>
+            <div id="texto"> 
+                <h1>Toca Do LoBo</h1>
+                <h1 id="restaurante">Restaurante e Lanchonete</h1>
+                <img id="lobo" src="imagem/lobo1.png" alt="Imagem de um Lobo">
+                <a  id="reservar" href="#">Reservar Uma Mesa</a>
+        </section>
+        <section id="localização">
+            <h1>Localização</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27799.603847445804!2d-46.730518341064474!3d-23.61013093372621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50437f9c357b%3A0x25a885b014be6e28!2sQuintana%20Bar!5e1!3m2!1spt-BR!2sbr!4v1738605956542!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
     <script>
