--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="estilo/style.css" media="all">
     <link rel="stylesheet" href="estilo/mediaquery.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <main>
         <section>
             <span id="menuham" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
             <nav id="itens">
-                <a href="#">Home</a>
-                <a href="#">Sobre Nós</a>
-                <a href="#">Menu</a>
-                <a href="#">Chefes</a>
-                <a href="#">Galeria</a>
-                <a href="#">Contatos</a>
+                <a href="index.html">Home</a>
+                <a href="sobrenos.html">Sobre Nós</a>
+                <a href="Menu.html">Menu</a>
+                <a href="Chefes.html">Chefes</a>
+                <a href="Galeria.html">Galeria</a>
+                <a href="Contatos.html">Contatos</a>
             </nav>
             <div id="texto"> 
                 <h1>Toca Do LoBo</h1>
@@ -33,6 +33,15 @@
         </section>
     </main>
     <script>
+
+       function mudouTamanho() {
+           if (window.innerWidth >= 577) {
+              itens.style.display = 'block'
+           } else {
+             itens.style.display = 'none'
+           }
+       }
+
         function clickMenu(){
             if (itens.style.display == 'block'){
                 itens.style.display = 'none'
