--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
                 <a href="sobrenos.html">Sobre Nós</a>
                 <a href="Menu.html">Menu</a>
                 <a href="Chefes.html">Chefes</a>
-                <a href="Galeria.html">Galeria</a>
                 <a href="Contatos.html">Contatos</a>
             </nav>
             <div id="texto"> 
                 <h1>Toca Do LoBo</h1>
                 <h1 id="restaurante">Restaurante e Lanchonete</h1>
                 <img id="lobo" src="imagem/lobo1.png" alt="Imagem de um Lobo">
-                <a  id="reservar" href="#">Reservar Uma Mesa</a>
+                <a  id="reservar" href="reserva.html">Reservar Uma Mesa</a>
         </section>
         <section id="localização">
             <h1>Localização</h1>
