--- a/reserva.html
+++ b/reserva.html
@@ -26,7 +26,7 @@
                   <h3>Faça Sua Reserva</h3>
                     <div>
                         <label for="inome"> Nome:
-                            <input type="text" name="nome" id="inome" required autocomplete="name" maxlength="30" minlength="4" size="30">
+                            <input type="text" name="nome" id="inome" required autocomplete="name" maxlength="30" minlength="4" size="30" placeholder="Seu Nome">
                         </label>
                     </div>
 
@@ -50,7 +50,7 @@
 
                     <div>
                         <label for="inumero"> Número de Pessoas:
-                            <input type="number" name="numero" id="inumero" required min="1" max="10" >
+                            <input type="number" name="numero" id="inumero" required min="1" max="10" value="2">
                         </label>
                     </div>
 
