--- a/index.html
+++ b/index.html
@@ -3,49 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <link rel="shortcut icon" href="imagem/lobo.png" type="image/x-icon">
     <title>Toca do LoBo</title>
     <link rel="stylesheet" href="estilo/style.css" media="all">
-    <link rel="stylesheet" href="estilo/mediaquery.css">
 </head>
-<body onresize="mudouTamanho()">
+<body>
+    <div id="menuham">
+        <span class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+        </span>
+    </div>
+    <header onresize="mudouTamanho()">
+        <nav id="menu">
+            <a href="Menu.html">Menu</a>
+            <a href="Chefes.html">Chefs</a>
+            <a href="sobrenos.html">Sobre Nós</a>
+            <a href="Contatos.html">Contatos</a>
+        </nav>
+    </header>
     <main>
-        <section>
-            <span id="menuham" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-            <nav id="itens">
-                <a href="index.html">Home</a>
-                <a href="sobrenos.html">Sobre Nós</a>
-                <a href="Menu.html">Menu</a>
-                <a href="Chefes.html">Chefes</a>
-                <a href="Contatos.html">Contatos</a>
-            </nav>
-            <div id="texto"> 
-                <h1>Toca Do LoBo</h1>
-                <h1 id="restaurante">Restaurante e Lanchonete</h1>
-                <img id="lobo" src="imagem/lobo1.png" alt="Imagem de um Lobo">
-                <a  id="reservar" href="reserva.html">Reservar Uma Mesa</a>
-        </section>
-        <section id="localização">
-            <h1>Localização</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27799.603847445804!2d-46.730518341064474!3d-23.61013093372621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50437f9c357b%3A0x25a885b014be6e28!2sQuintana%20Bar!5e1!3m2!1spt-BR!2sbr!4v1738605956542!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
+        <div id="titulo">
+            <h1>Toca Do LoBo</h1>
+        </div>
+        <div id="reserva">
+            <a href="">Faça Sua Reserva</a>
+        </div>
+        <div id="mapa">
+            <h2>Localização</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2416.187608627284!2d-73.98758987754744!3d40.74180762757385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a715fb5059%3A0xe5543b76e952fab3!2sUpland!5e1!3m2!1spt-BR!2sbr!4v1739376443886!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </main>
     <script>
-
-       function mudouTamanho() {
-           if (window.innerWidth >= 577) {
-              itens.style.display = 'block'
-           } else {
-             itens.style.display = 'none'
-           }
-       }
-
-        function clickMenu(){
-            if (itens.style.display == 'block'){
-                itens.style.display = 'none'
-            } else{
-                itens.style.display = 'block'
+ 
+        function clickMenu() {
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
             }
         }
     </script>
