--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <div id="formulario">
             <form action="reserva.php" method="post">
+                <h2>Faça Sua Reserva</h2>
                 <label for="inome"> Nome:
                     <input type="text" name="nome" id="inome" placeholder="Seu Nome" required autocomplete="name" maxlength="30" size="26">
                 </label>
@@ -45,6 +46,7 @@
                 <label for="inum"> Número de Pessoas:
                     <input type="number" name="numero" id="inum" min="1" max="10" value="2" required>
                 </label>
+
               <input class="botao" type="submit" value="Reserva">
               <input class="botao" type="reset" value="Limpar">
             </form>
